# tabroom-API

./: .dockerignore  .gitignore  .infisical.json  BidList.md  DOCS.md  Dockerfile  LICENSE  RANKING_METHODOLOGY.md  README.md  VPF 20-21.md  app.py  archive.csv  data.csv  foo.py  judges.csv  leaders.py  logs.txt  main.py  makefile  merge.py  nsd.csv  other.csv  pyproject.toml  requirements.txt  statistical_visualization.ipynb  t.html  t.json  test.ipynb  test.py  topics.csv  tourns.csv
Result Analysis/: IHSA 2019.json  IHSA 2021.json  Result Visualization.ipynb
api/: MakeTable.py  filter_independent.py  scrape_by_entry.py  scraper.py  scraper2.py  tournament_meta_gen.py
archive/: VPF 20-21.md
data/: 2020-21 MASTER.json  2021-22 MASTER.json  all_tournament_info.json  emails.json  leaders.json  raw_data.json  sample_data_with_speaks.json  team_data.json  tournInfo.json  tournament_data.json  tournament_info_for_parsing.json
data/tournaments/: 2021 Sunvite.json  35th Annual Stanford Invitational.json  46th University of Pennsylvania Tournament.json  47th Annual Harvard National Forensics Tournament.json  Alta Silver and Black Invitational.json  (+85 more)
pipelines/: transformer.py  uploader.py
scraper/: requirements.txt
shared/: const.py  helpers.py  indexed_list.py  lprint.py
templates/: signup.html  success.html
tests/: runtime.py
utils/: checkGhostBid.py  condensor.py  condensors.py  const.py  createArchive.py  fixChampionBreakRecords.py  generator.py  helpers.py  judgeAnalysis.py  leaders.py  lifetimeResults.py  merge.py  parsers.py  scrapers.py  tournInfo.json
(+30 files in other folders)
