[tool.poetry]
name = "tabroom-api"
version = "0.1.0"
description = ""
authors = ["Samarth Chitgopekar <sam@debate.land>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
cattrs = "23.1.2"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
idna = "3.4"
numpy = "1.25.2"
platformdirs = "3.10.0"
requests = "2.31.0"
requests-cache = "1.1.0"
six = "1.16.0"
soupsieve = "2.4.1"
unidecode = "1.3.6"
url-normalize = "1.4.3"
urllib3 = "2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
